# codex-gitlab-code-review

./: AGENTS.md  Cargo.toml  Dockerfile  STYLE_GUIDE.md  config.example.yaml  justfile
.github/workflows/: docker-image.yml
charts/codex-gitlab-review/: Chart.yaml  values.yaml
charts/codex-gitlab-review/templates/: NOTES.txt  _helpers.tpl  codex-auth-configmap.yaml  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  proxy-configmap.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/codex-gitlab-review/tests/: gitlab_discovery_mcp_test.yaml
migrations/: 0001_init.sql  0002_project_state.sql  0003_project_catalog.sql  0004_service_state.sql  0005_mention_command_state.sql  0006_project_catalog_count.sql  0007_run_history.sql  0008_run_history_event.sql  0009_run_history_events_persisted_cleanly.sql  0010_run_history_transcript_backfill.sql  0011_run_history_feature_flags.sql  0012_security_review_lane.sql  0013_security_run_history_kind.sql  0014_security_context_source_run.sql  0015_run_history_security_context_metadata.sql  0016_run_history_security_context_payload.sql  0017_run_history_security_context_timing.sql  0018_security_review_debounce.sql  0019_runtime_review_rate_limit.sql  0020_runtime_review_rate_limit_targets.sql  0021_runtime_review_rate_limit_project_scope_repo.sql  0022_mention_quota_pending.sql
scripts/: sync_codex_review_prompts.py
src/: auth_cli.rs  bootstrap.rs  cli.rs  codex_runner.rs  composer_install.rs  config.rs  demo_history.rs  docker_utils.rs  duration.rs  feature_flags.rs  generated_review_prompt_templates.rs  gitlab.rs  gitlab_links.rs  lib.rs  lifecycle.rs  main.rs  review.rs  review_lane.rs  review_prompt_templates.rs  scheduler.rs  service_factory.rs  skills.rs  state.rs  text.rs  transcript_backfill.rs
src/codex_runner/: app_server.rs  app_server_diagnostics.rs  auth.rs  browser_mcp.rs  composer.rs  container.rs  docker.rs  duration.rs  gitlab_discovery.rs  mention_flow.rs  mention_inputs.rs  mod.rs  placeholders.rs  review_flow.rs  review_output.rs  scripts.rs  security_context.rs  session_runner.rs  test_support.rs  tests.rs
src/composer_install/: auth.rs  auth_lookup_tests.rs  auth_prepare_tests.rs  command.rs  mod.rs  output.rs
src/config/: defaults.rs  feature_flags.rs  load.rs  test_builder.rs  tests.rs  validate.rs
src/dev_mode/: demo_history.rs  mod.rs  runner.rs  transcript.rs
src/flow/: award_service.rs  mention.rs  mention_assets.rs  mod.rs  orchestration.rs  review.rs  review_comments.rs
src/gitlab/: api.rs  bot_user.rs  client.rs  discussions.rs  links.rs  merge_requests.rs  mod.rs  pagination.rs  projects.rs  tests.rs  tls.rs  transport.rs  types.rs  uploads.rs  users.rs
src/gitlab_discovery_mcp/: mod.rs  registry.rs  server.rs  service.rs
src/http/: errors.rs  forms.rs  handlers.rs  markdown.rs  mod.rs  status.rs  tests.rs  timestamp.rs  transcript.rs  view.rs
src/review/: lane_policies.rs  scan_coordinator.rs  scan_pipeline.rs  service.rs  target_resolver.rs  tests.rs
src/skills/: tests.rs
src/snapshots/: codex_gitlab_code_review__auth_cli__tests__auth_login_script.snap  codex_gitlab_code_review__composer_install__tests__composer_install_script.snap
src/state/: feature_flags_repository.rs  mention_commands_repository.rs  mention_quota_pending_repository.rs  mod.rs  project_catalog_repository.rs  review_rate_limit_repository.rs  review_state_repository.rs  run_history_repository.rs  security_context_cache_repository.rs  security_review_debounce_repository.rs  service_state_repository.rs  sqlite.rs  tests.rs
tests/: chart_egress_support.rs  chart_graceful_restart.rs  chart_ingress.rs  chart_session_history.rs  chart_work_tmpfs.rs  e2e_live.rs
(+114 files in other folders)
