[package]
name = "codex-gitlab-code-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
config = "0.15.19"
cron = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
wiremock = "0.6.5"
