[package]
name = "codex-gitlab-code-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
config = "0.15.19"
cron = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rmcp = { version = "1.2.0", features = ["transport-streamable-http-server"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
pulldown-cmark = "0.13.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
flate2 = "1.1.9"
tar = "0.4.45"
zip = "8.3.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
wiremock = "0.6.5"
