[package]
name = "codex-gitlab-code-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
bollard = "0.20.2"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
config = "0.15.22"
cron = "0.16.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "multipart", "rustls-no-provider"] }
rmcp = { version = "1.3.0", features = ["transport-streamable-http-server"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pulldown-cmark = "0.13.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v4"] }
flate2 = "1.1.9"
tar = "0.4.45"
zip = "8.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
wiremock = "0.6.5"
